@@ -1,89 +1,75 @@
 package com.example.demo;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Stream;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
 @SpringBootApplication
 public class DemoApplication {
 
-    private static final Map<String, Point> conversor;
-
-    static {
-        conversor = new HashMap<>();
-        conversor.put("U", new Point(0, 1));
-        conversor.put("R", new Point(1, 0));
-        conversor.put("L", new Point(-1, 0));
-        conversor.put("D", new Point(0, -1));
-    }
 
     public static void main(String[] args) {
         SpringApplication.run(DemoApplication.class, args);
-        List<String> comands = Arrays.asList("RUULLLDDDR");
-        System.out.println(calcularMaximoRetorno(comands));
+
+        List<Integer> b = List.of(2, 40, 20, 5);
+        List<Integer> a = List.of(5, 110, 30, 10);
+        List<List<Integer>> list = List.of(a, b);
+        System.out.println(podraCumplir(list));
     }
 
-    public static List<Integer> calcularMaximoRetorno(List<String> instruccions) {
+    public static List<Boolean> podraCumplir(List<List<Integer>> caso) {
 
-        List<Integer> respuesta = new ArrayList<>();
+        List<Boolean> valid = new ArrayList<>();
 
-        for (String instruccion : instruccions) {
+        List<Info> list = caso
+            .stream()
+            .map(Info::new).toList();
 
-            Point origen = new Point(0, 0);
-
-            Stream.of(instruccion.split(""))
-                .map(conversor::get)
-                .map(origen::add)
-                .max(Comparator.comparing(Point::getDistance))
-                .ifPresent(p -> respuesta.add(p.getAmountStep()));
+        for (Info i : list) {
+            int ac = 0;
+            for (int j = 0; j < i.getD() - 1; j++) {
+                ac += (i.getF() - i.getR());
+            }
+            ac += i.getF();
+            boolean result = (i.getT() == ac);
+            valid.add(result);
         }
 
-        return respuesta;
+        return valid;
     }
 
 }
 
-class Point {
+class Info {
 
-    private Integer x;
-    private Integer y;
+    private Integer D;
+    private Integer T;
+    private Integer F;
+    private Integer R;
 
-    public Point(Integer x, Integer y) {
-        this.x = x;
-        this.y = y;
+    public Info(List<Integer> data) {
+        this.D = data.get(0);
+        this.T = data.get(1);
+        this.F = data.get(2);
+        this.R = data.get(3);
     }
 
-    public Integer getX() {
-        return x;
+    public Integer getD() {
+        return D;
     }
 
-    public Integer getY() {
-        return y;
+    public Integer getT() {
+        return T;
     }
 
-    @Override
-    public String toString() {
-        return "Point [x=" + x + ", y=" + y + "]";
+    public Integer getF() {
+        return F;
     }
 
-    public Point add(Point origin) {
-        this.x += origin.x;
-        this.y += origin.y;
-        return new Point(this.x, this.y);
+    public Integer getR() {
+        return R;
     }
-
-    public Double getDistance() {
-        return Math.sqrt(Math.pow(x, 2) + Math.pow(y, 2));
-    }
-
-    public Integer getAmountStep() {
-        return Math.abs(x) + Math.abs(y);
-    }
-
 }
+
+
